# doc_indexor

./: README.md  pyproject.toml  setup.py
src/doc_indexer/: __init__.py  cli.py  indexer.py  models.py  parser_factory.py  parsers.py  vector_store.py
src/doc_indexer/parsers/: __init__.py  base.py  config.py  pdf_parser.py  powerpoint_parser.py  word_parser.py
src/doc_indexer/parsers/llm_providers/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
src/doc_indexer/parsers/strategies/: __init__.py  base.py  llm_enhanced.py  text_only.py
src/doc_indexer/utils/: __init__.py  security.py
tests/: test_cli.py  test_document_parser.py  test_indexer.py  test_ollama_model_config.py  test_vector_store.py
tests/parsers/: test_base_parser.py  test_llm_providers.py  test_llm_strategy.py
